# tf-keras-deeplabv3p-model-set

./: README.md  deeplab.py  eval.py  requirements.txt  train.py
common/: callbacks.py  data_utils.py  model_utils.py  utils.py
configs/: ade20k_classes.txt  camvid_classes.txt  cihp_classes.txt  cityscapes_classes.txt
deeplabv3p/: data.py  loss.py  metrics.py  model.py
deeplabv3p/models/: deeplabv3p_ghostnet.py  deeplabv3p_mobilenetv2.py  deeplabv3p_mobilenetv3.py  deeplabv3p_mobilevit.py  deeplabv3p_peleenet.py  deeplabv3p_resnet50.py  deeplabv3p_xception.py  layers.py
deeplabv3plus/: model.py  postprocess_np.py
deeplabv3plus/models/: deeplabv3p_mobilenetv2.py  deeplabv3p_mobilenetv3.py  deeplabv3p_resnet50.py  deeplabv3p_xception.py
fast_scnn/: model.py
fast_scnn/models/: fast_scnn.py
inference/: README.md  eval_inference.sh
inference/MNN/: CMakeLists.txt  deeplabSegment.cpp
inference/MNN/configs/: quantizeConfig.json
inference/tflite/: CMakeLists.txt  deeplabSegment.cpp  deeplabSegment.h
tools/dataset_converter/: dataset_visualize.py  label_statistics.py
tools/dataset_converter/ade20k/: dataset_prepare.sh  gray_label_convert.py
tools/dataset_converter/camvid/: camvid_convert.py  dataset_prepare.sh
tools/dataset_converter/cihp_atr/: dataset_prepare.sh
tools/dataset_converter/cityscapes/: dataset_prepare.sh  gray_label_convert.py
tools/dataset_converter/instance_segment/: coco_annotation.py  coco_visualize.py  instance_segment_visualize.py  voc_sbd_annotation.py  voc_sbd_to_coco.py  voc_visualize.py
tools/dataset_converter/labelme/: json_to_dataset.py
tools/dataset_converter/mscoco2017/: coco_convert.py  dataset_prepare.sh
tools/dataset_converter/voc_augment/: dataset_prepare.sh  imageset_merge.py  voc_aug_convert.py
tools/evaluation/: convkernel_check.py  featuremap_check.py  model_statistics.py  validate_deeplab.py  validate_deeplab_gpu.py  validate_deeplab_tensorrt.py
tools/evaluation/onboard/: onboard_png_convert.py  semantic_segment_eval.py
tools/misc/: augment_test.py  edge_detect.py
tools/model_converter/: keras_to_onnx.py  keras_to_tflite.py  onnx_edit.py  post_train_quant_convert.py  tensorflow_to_rknn.py
unet/: model.py
unet/models/: layers.py  unet.py
